<resources>
    <string name="app_name">VOCA DIY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_file">Choose Excel File</string>
    <string name="title_activity_category">Choose Study Type</string>
    <string name="title_activity_type">Choose Word Class</string>
    <string name="title_activity_study">Study</string>
    <string name="title_activity_choice_problem">Multiple Choice Question</string>
    <string name="title_activity_write">Write alphabets correctly</string>
    <string name="title_activity_select_group">Select group to add</string>
    <string name="title_activity_help">How to use</string>
    <string name="title_activity_info">Application info</string>


    <string name="navi_home">Home</string>
    <string name="navi_help">Help</string>
    <string name="navi_info">Application Info</string>
    <string name="navi_mail">Feedback</string>
    <string name="navi_basic">Add Basic Vocaburaries</string>
    <string name="navi_donate">Buying food for Developer</string>
    <string name="navi_grade">Rate</string>
    <string name="navi_share">Share this app</string>
    <string name="navi_setting">Settings</string>

    <string name="action_example">Example action</string>
    <string name="ok">OK</string>
    <string name="main_add">Voca Add</string>
    <string name="main_help">Help</string>
    <string name="main_opt">More</string>
    <string name="list_parent_folder">.. Parent Folder</string>
    <string name="enter_your_voca_name">Put the vocabulary group name.</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="study">Study</string>
    <string name="find_meaning">Find Meaning</string>
    <string name="find_word">Find Word</string>
    <string name="write_word">Write Word</string>
    <string name="type_all">All</string>
    <string name="type_n">Noun</string>
    <string name="type_v">Verb</string>
    <string name="type_a">Adjective</string>
    <string name="type_ad">Adverb</string>
    <string name="type_e">E.T.C</string>
    <string name="type_study_mention">Please select study mode.</string>
    <string name="type_open">Open Mode</string>
    <string name="type_blind">Blind Mode</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="result_again_study">Study Again</string>
    <string name="result_again">Test Again</string>
    <string name="result_wrong">Wrong Problem Again</string>
    <string name="result_save">Wrong Problem Save</string>
    <string name="result_home">Go To Main</string>
    <string name="result_save_mention">Please select the type of vocabulary added.</string>
    <string name="result_save_new">Brand New</string>
    <string name="result_save_old">Existing One</string>
    <string name="result_problems">Problems,</string>
    <string name="result_correct">Correct.</string>
    <string name="result_point">pnt</string>
    <string name="group_delete">Delete</string>
    <string name="group_change">Change Name</string>
    <string name="group_copy">Copy</string>
    <string name="group_settings">Vocabulary Settings</string>
    <string name="find_duplicate">Vocabulary name is duplicated.</string>
    <string name="no_voca">There are not enough voca to test for this type.\nPlease use All type test or add new vocabulary.</string>
    <string name="no_name">Please enter valid vocabulary name.</string>
    <string name="find_add_msg">Vocabulary is being loaded.\nPlease Wait</string>
    <string name="main_word"> Words</string>
    <string name="pref_basic">Basic Settings</string>
    <string name="pref_basic_random">Test Order Randomly</string>
    <string name="pref_basic_random_des_on">Based on Excel file order.</string>
    <string name="pref_basic_random_des_off">The problem will not be questions as Excel file order.</string>
    <string name="pref_info">Applicaton Infomation</string>
    <string name="pref_info_version">Version</string>
    <string name="pref_info_feedback">Send Feedback</string>
    <string name="pref_info_feedback_des">Send an email to the developer.</string>
    <string name="pref_info_donation">Donation</string>
    <string name="pref_info_donation_des">The donation would be a big help to the developer.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="voca_add_oldone">Would you like to add wrong problems to this vocabulary group?</string>
    <string name="load_save">There is a record was studied.\nWould you like to learn from where you did?\n(If the previous record disappears again from the beginning.)</string>
    <string name="stop_study">Are you sure you want to exit the learning?\nYou can learn content from here when you come back.</string>
    <string name="exit">Are you sure you want to quit?</string>
    <string name="click_answer">Please select the correct answer from examples.</string>
    <string name="write_answer">Please write the correct answer from examples.</string>
    <string name="share">Study vocabulary and testing with this application.</string>
    <string name="grade">Move to "Play Store" to leave rating.\n5 stars are very helpful to developer.</string>
    <string name="donation_snack">Buy me a snack ( $0.99 )</string>
    <string name="donation_coffee">Buy me a coffee ( $2.99 )</string>
    <string name="donation_hamburger">Buy me a hamburger ( $4.99 )</string>
    <string name="donation_pizza">Buy me a pizza ( $9.99 )</string>
    <string name="donation_cancel">Donation is canceled</string>
    <string name="donation_fail">Inapp Purchase canceled</string>
    <string name="donation_success">Thank you for your donation</string>

    <string name="broadcast_share_title">Choose an Application to share</string>
    <string name="broadcast_email_title">Choose an Email Application</string>

    <string name="permission">To add excel file, "File Read Permission" is necessary.</string>
    <string name="permission_deny">If you reject permission, you can not add excel files\nPlease turn on permissions at [Setting] > [Application-VocaDiy] > [Permission]</string>

    <string name="help_01">\"VOCA DIY\" app is memorizing the words you want to memorize words by uploading directly.</string>
    <string name="help_02">You must save yourself the words you want to memorize the Excel file.</string>
    <string name="help_03">When you save an Excel file There is a simple rule.</string>
    <string name="help_04">The user must enter a value in a total of three columns.</string>
    <string name="help_05">The first column is the part of speech of the word, the second column is the word,and the third column is the meaning of the word.</string>
    <string name="help_06">You entered parts of speech helps to provide a great view from the multiple-choice questions.</string>
    <string name="help_07">Alphabet to write the part of speech is defined by part of speech.</string>
    <string name="help_08">\n[ n ]: Noun
             \n[ v ]: Verb
             \n[ a ]: Adjective
             \n[ ad ]: Adverb
             \n[ e ]: Other Parts of Speech</string>
    <string name="help_09">If a word has two meaning, please put a meaning like this :</string>
    <string name="help_10">Word learning can be a total of four types.</string>
    <string name="help_11">First, just learn the words.</string>
    <string name="help_12">Second, looking at the problem of finding meaning in the word-choice questions.</string>
    <string name="help_13">Third, looking at the problem of finding word in the meaning-choice questions</string>.
    <string name="help_14">Fourth, the problem will write the words to see yourself.</string>
    <string name="help_15">Wrong answers can be seen right back test, add a new vocabulary or you can also add to the existing vocabulary.</string>
    <string name="help_16">You can change the order option of questions in the \"Settings\" view on App Drawer.</string>


</resources>
