<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navi_home"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/navi_help"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/navi_info"/>
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_money"
            android:title="@string/navi_donate"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/navi_share"/>
            <item
                android:id="@+id/nav_grade"
                android:icon="@drawable/ic_grade"
                android:title="@string/navi_grade"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_mail"
                android:title="@string/navi_mail"/>
        </menu>
    </item>

</menu>